--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -2,12 +2,14 @@
 # Documentation: https://docs.pretalx.org/administrator/configure.html
 
 [filesystem]
-data = /var/pretalx/data
-static = /var/pretalx/static
+base = /pretalx
+data = /data
+static = /pretalx/src/pretalx/static
 
 [site]
 debug = False
 url = https://pretalx.mydomain.com
+secret = asecret
 
 [database]
 # For MySQL, replace with "mysql"
