--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ version: '3'
 services:
   pretalx:
     image: pretalx/standalone:latest
+    build:
+      context: .docker/deployment
     container_name: pretalx
     restart: unless-stopped
-    depends_on: 
+    depends_on:
       - redis
       - db
     environment:
@@ -13,10 +15,11 @@ services:
       PRETALX_FILESYSTEM_STATIC: /public/static
     ports:
       - "80:80"
-    volumes: 
+    volumes:
       - ./conf/pretalx.cfg:/etc/pretalx/pretalx.cfg:ro
-      - pretalx-data:/data
-      - pretalx-public:/public
+      - ./.docker/volumes/data:/data
+      - ./.docker/volumes/public:/public
+      - ./src:/pretalx/src:delegated
     labels:
        traefik.docker.network: "pretalxdocker"
        traefik.enable: "true"
@@ -38,12 +41,10 @@ services:
     image: redis:latest
     container_name: pretalx-redis
     restart: unless-stopped
-    volumes: 
+    volumes:
       - pretalx-redis:/data
 
 volumes:
   pretalx-db:
-  pretalx-data:
-  pretalx-public:
   pretalx-redis:
 
