--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -2,7 +2,7 @@
 # Documentation: https://docs.pretalx.org/administrator/configure.html
 
 [filesystem]
-base = /pretalx
+base = /pretalx/src
 data = /data
 static = /pretalx/src/pretalx/static
 
