--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .docker/deployment
     container_name: pretalx
-    restart: unless-stopped
+    restart: always
     depends_on:
       - redis
       - db
@@ -27,7 +27,7 @@ services:
   db:
     image: mysql:latest
     container_name: pretalx-db
-    restart: unless-stopped
+    restart: always
     volumes:
       - pretalx-db:/var/lib/mysql
     environment:
@@ -40,7 +40,7 @@ services:
   redis:
     image: redis:latest
     container_name: pretalx-redis
-    restart: unless-stopped
+    restart: always
     volumes:
       - pretalx-redis:/data
 
