--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,7 @@ atlassian-ide-plugin.xml
 # generic local files
 local/
 *.xml
-pretalx.cfg
+src/pretalx.cfg
 override_settings.py
 
 # OS X
@@ -102,5 +102,6 @@ src/tests/**/*.yml
 screens/
 
 volumes/
-src/data
 src/pretalx/static/CACHE
+data
+public
