--- a/bin/build
+++ b/bin/build
@@ -1,4 +1,4 @@
 #!/bin/bash
-docker compose exec -u root -T pretalx python3 /pretalx/src/manage.py makemigrations
-docker compose exec -u root -T pretalx python3 /pretalx/src/manage.py migrate
-docker compose exec -u root -T pretalx python3 /pretalx/src/manage.py rebuild
+docker compose exec -u pretalxuser -T pretalx python3 /pretalx/src/manage.py makemigrations
+docker compose exec -u pretalxuser -T pretalx python3 /pretalx/src/manage.py migrate
+docker compose exec -u pretalxuser -T pretalx python3 /pretalx/src/manage.py rebuild
