--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
     container_name: pretalx
+    user: "1000:1000"
     restart: always
     depends_on:
       - redis
