OERC-32: revertig user declaration after fi xing deploy user on live server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
     build:
       context: .
     container_name: pretalx
-    user: "1000:1000"
     restart: always
     depends_on:
       - redis
@@ -17,6 +16,8 @@ services:
     volumes:
       - ./pyproject.toml:/pretalx/pyproject.toml:ro
       - ./src/pretalx.cfg:/etc/pretalx/pretalx.cfg:ro
+      - ./.docker/volumes/data:/pretalx/data
+      - ./.docker/volumes/public:/pretalx/public
       - ./src:/pretalx/src:delegated
     labels:
        traefik.docker.network: "pretalxdocker"
