OERC-28: fixing iframe loading and CORSpolicy so that etherpad can be loaded and edited inside an iframe

--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -10,6 +10,7 @@ static = /pretalx/src/pretalx/static
 debug = False
 url = https://pretalx.mydomain.com
 secret = asecret
+csp = *
 
 [database]
 # For MySQL, replace with "mysql"
