OERC-22: Voting-Plugin Update: making voting optional and adding a comment function.

--- a/bin/build
+++ b/bin/build
@@ -2,3 +2,4 @@
 docker compose exec -u pretalxuser -T pretalx python3 /pretalx/src/manage.py makemigrations
 docker compose exec -u pretalxuser -T pretalx python3 /pretalx/src/manage.py migrate
 docker compose exec -u pretalxuser -T pretalx python3 /pretalx/src/manage.py rebuild
+docker compose exec -u pretalxuser -T pretalx python3 /pretalx/src/manage.py regenerate_css
