OERC-32: fixing media folder and generation of css

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,7 @@ services:
       - "80:80"
     volumes:
       - ./.docker/volumes/data:/pretalx/data
+      - ./.docker/volumes/public:/pretalx/public
     depends_on:
       - mailpit
   mailpit:
