--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -4,9 +4,13 @@
 [filesystem]
 base = /pretalx/src
 data = /pretalx/data
-static = /pretalx/src/pretalx/static
+logs = /pretalx/data/logs
+static = /pretalx/public/static
+media = /pretalx/public/media
 
 [site]
+; NOVA: media was added for MEDIA_URL used in src/pretalx/common/tasks.py
+media = /pretalx/public/media/
 debug = False
 url = https://pretalx.mydomain.com
 secret = asecret
