OERC-51: Adding fonts to tinymce editor: unbounded and open sans

--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -16,6 +16,7 @@ url = https://pretalx.mydomain.com
 secret = asecret
 csp = *
 csp_img = *
+csp_style = fonts.googleapis.com
 
 [database]
 # For MySQL, replace with "mysql"
