OERC-55: adjusting error message in scheduler

--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -11,6 +11,10 @@ media = /pretalx/public/media
 [site]
 ; NOVA: media was added for MEDIA_URL used in src/pretalx/common/tasks.py
 media = /pretalx/public/media/
+; never run debug in production. Make sure you serve all requests for the
+; `/static/` and `/media/` paths when debug is False.
+; See [installation](https://docs.pretalx.org/administrator/installation/#step-7-ssl) for more information
+; NOVA: See also Readme for more infos
 debug = False
 url = https://pretalx.mydomain.com
 secret = asecret
