OERC-58: updating readme

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 #This is for docker-compose
 #Please fill out these values in pretalx.cfg too
-DB_HOST=mysql
+DB_HOST=pretalx-db
 DB_PORT=3306
 DB_DATABASE=pretalx
 DB_USERNAME=pretalx
-DB_PASSWORD=pretalx
+DB_PASSWORD=veryunsecureplschange
 DB_ROOT_PASSWORD=root
