--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -1,7 +1,5 @@
-# This is an example pretalx configuration file.
-# Documentation: https://docs.pretalx.org/administrator/configure.html
-
 [filesystem]
+# use PRETALX_FILESYSTEM_* env vars
 base = /pretalx/src
 data = /pretalx/data
 logs = /pretalx/data/logs
@@ -15,33 +13,43 @@ media = /pretalx/public/media/
 ; `/static/` and `/media/` paths when debug is False.
 ; See [installation](https://docs.pretalx.org/administrator/installation/#step-7-ssl) for more information
 ; NOVA: See also Readme for more infos
-debug = False
-url = https://pretalx.mydomain.com
+debug = True
+url = http://localhost
 secret = asecret
 csp = *
 csp_img = *
-csp_style = fonts.googleapis.com
+csp_style = fonts.googleapis.com *.oercamp.de
+csp_script = 'unsafe-inline' 'unsafe-eval' *.cookiebot.com *.oercamp.de
+csp_form = *.oercamp.de
 
 [database]
-# For MySQL, replace with "mysql"
 backend = mysql
 name = pretalx
 user = pretalx
-# For MySQL, enter the user password. For PostgreSQL on the same host,
-# we don't need one because we can use peer authentification if our
-# PostgreSQL user matches our unix user.
-password = Change this in production or you're going to have a bad time
-# For MySQL, you can use a local socket, e.g. /var/run/mysqld/mysqld.sock
-# For a remote host, supply an IP address
-# For local postgres authentication, you can leave the host empty
+password = veryunsecureplschange
 host = pretalx-db
 port = 3306
 
 [mail]
-from = admin@localhost
-host = localhost
-port = 25
-user = admin
-password = Change this in production or you're going to have a bad time
-tls = False
-ssl = True
+from = pretalx@pretalx.oercamp.de
+host = mailpit
+port = 1025
+#from = pretalx@pretalx.oercamp.de
+#host = mail.your-server.de
+#port = 587
+#user = pretalx@oercamp.de
+#password = 7z7Km16Hr9K3ThNS
+#tls = True
+#ssl = False
+
+
+
+[celery]
+backend = redis://pretalx-redis/1
+broker = redis://pretalx-redis/2
+
+[redis]
+location=redis://pretalx-redis/0
+; Remove the following line if you are unsure about your redis' security
+; to reduce impact if redis gets compromised.
+sessions=true
