OERC-58: updating exampe config

--- a/src/pretalx.example.cfg
+++ b/src/pretalx.example.cfg
@@ -34,11 +34,11 @@ port = 3306
 from = pretalx@pretalx.oercamp.de
 host = mailpit
 port = 1025
-#from = pretalx@pretalx.oercamp.de
-#host = mail.your-server.de
-#port = 587
-#user = pretalx@oercamp.de
-#password = 7z7Km16Hr9K3ThNS
+#from = 
+#host =
+#port =
+#user =
+#password =
 #tls = True
 #ssl = False
 
